# ToyPaymentEngine

./: Cargo.toml  README.md  out.csv  output.csv  output.txt
src/: amount.rs  client.rs  database.rs  main.rs  parse_csv.rs  parse_env_args.rs  transaction.rs
test/: test.csv  test11.csv  test2.csv  test8.csv
testgen/: Cargo.toml
testgen/src/: main.rs
